Added Overview Code

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 Land/clms-hrsi-arlie_demo-iceland/output/geometries.csv
 Land/clms-hrsi-arlie_demo-iceland/__pycache__/clms_hrsi_arlie_downloader.cpython-312.pyc
+login.json
